--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -1,29 +1,48 @@
 {% extends "templates/app.twig" %} {% block content %}
 <div class="flex-grow-1 d-flex align-items-start">
     <div class="row w-100">
-        <div class="col-md-8">
-            <div id="containers">
-                <div class="loading">
-                    <i class="icon-spinner icon-spin icon-large"></i> Loading data from Google Spreadsheets...
+        <div class="col-md-6">
+            <div id="containers" class="d-flex justify-content-center">
+                <div class="loading d-flex justify-content-center">
+                    <div class="spinner-border" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
                 </div>
             </div>
 
         </div>
-        <div class="col-md-4">
-            <p>In 2019,
-                <span id="country-name">Costa Rica</span> was the
-                <span id="country-rank">12th</span> happiest country in the world</p>
-            <h3>Why is
-                <span id="country-name-question">Costa Rica</span> in this place?</h3>
+        <div class="col-md-6">
+            <div id="loading-info" class="d-flex justify-content-center">
+                <div class="loading d-flex justify-content-center">
+                    <div class="spinner-border" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
 
-            <figure class="highcharts-figure">
-                <div id="container-2"></div>
-            </figure>
+            </div>
+
+            <div id="panel-info" style="display: none;">
+                <p class="info-year">In 2019,
+                    <span id="country-name">Costa Rica</span> was the
+                    <span id="country-rank">12th</span> happiest country in the world</p>
+                <p class="info-year">Why is
+
+                    <span id="country-name-question">Costa Rica</span> in this place?</p>
+
+                <div class="">
+                    <figure class="highcharts-figure">
+                        <div id="container-2"></div>
+                    </figure>
+                </div>
+                <div class="">
+                    <button class="btn btn-more w-100" onclick="learnMore()">Learn more</button>
+
+                </div>
+            </div>
         </div>
     </div>
 
 </div>
-
 {% endblock %} {% block scripts%}
 <script src="{{ base_url() }}/js/index.js"></script>
 <script>
