--- a/resources/views/templates/partials/navigation_public.twig
+++ b/resources/views/templates/partials/navigation_public.twig
@@ -1,22 +1,22 @@
-<nav class="navbar navbar-expand navbar-light navbar-tec sticky-top">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand navbar-blue sticky-top">
+    <a class="navbar-brand" href="{{ path_for('home') }}">Global happiness report</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
     <div class="collapse navbar-collapse" id="navbarNav">
-
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">A</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Change password</a>
-
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sign out</a>
-            </li>
-
-        </ul>
+        <!-- <ul class="navbar-nav ml-auto">
+			            <li class="nav-item">
+			                <a class="nav-link" href="#">A</a>
+			            </li>
+			            <li class="nav-item">
+			                <a class="nav-link" href="#">Change password</a>
+			
+			            </li>
+			            <li class="nav-item">
+			                <a class="nav-link" href="#">Sign out</a>
+			            </li>
+			
+			        </ul> -->
     </div>
 </nav>
